--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "serve": "npx backlight@latest serve iED5Q7C4qZJI77yhKQ2C --open"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "token-transformer": "^0.0.23",
+    "style-dictionary": "^3.7.1"
+  },
   "dependencies": {}
 }
