--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: Example
-          author_email: example@gmail.com
+          author_name: Itthijit Manjit
+          author_email: itthijitm@becworld.com
           message: 'chore: style-dictionary output'
           add: '.'
