--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -22,7 +22,7 @@ jobs:
         run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json --resolveReferences false
 
       - name: Run style-dictionary
-        run: npx style-dictionary build --config sd.config.cjs
+        run: npx style-dictionary build --config sd.config.json
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
